--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Alh Kÿtran's Blog!
 logo: /assets/img/logo.png
-description:  Alh KŸtran's personal blog
+description:  Personal blog
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
