--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Alh Kÿtran's Blog!
-logo: /assets/img/logo.png
+logo: /assets/img/logo2.jpeg
 description:  Personal blog
 show_downloads: true
 google_analytics:
